# Tetris

./: .gitignore  Doxyfile  README.md
TETRIS/: CMakeLists.txt
TETRIS/console/: CMakeLists.txt  Controller.cpp  Controller.h  View.cpp  View.h  main.cpp
TETRIS/gui/: CMakeLists.txt  gameboard.cpp  gameboard.h  gameboard.ui  gameoptions.cpp  gameoptions.h  gameoptions.ui  main.cpp
TETRIS/metier/: Bag.cpp  Bag.h  Board.cpp  Board.h  Brick.cpp  Brick.h  CMakeLists.txt  DefaultBricks.cpp  DefaultBricks.h  Direction.cpp  Direction.h  Game.cpp  Game.h  Observer.h  Position.cpp  Position.h  Square.cpp  Square.h  Subject.h
TETRIS/tests/: CMakeLists.txt  tests.cpp
